# orodruin-maya

./: .gitmodules  .mypy.ini  LICENSE  README.md  notes.md  pyproject.toml
modules/: OrodruinMaya.mod
scripts/: orodruin_maya_startup.py  userSetup.py
scripts/orodruin_maya/: __init__.py  component.py  graph.py  port.py  utils.py
scripts/orodruin_maya/core/: __init__.py  component.py  connection.py  graph.py  node.py  port.py  serializer.py  state.py
scripts/orodruin_maya/ui/: dockable_widget.py  editor_window.py
scripts/orodruinmaya/: __init__.py  component_builder.py  dag_rig.py  dg_rig.py  library.py  rig.py  utils.py
scripts/orodruinmaya/metanode/: fields.py  metanode.py  validators.py
snippets/: build_component.py
tests/MayaLibrary/maya/: ChainBlender.py  Control.py  FKChain.py  IKChain.py  Joint.py  Transform.py
tests/MayaLibrary/orodruin/: Arm.json  IKFKChain.json  Joint.json  TwistExtractor.json
tests/OrodruinLibrary/maya/modules/: OrodruinLibrary.mod
tests/OrodruinLibrary/maya/scripts/OrodruinLibrary/: Control.py  Joint.py  TwistExtractor.py
tests/OrodruinLibrary/orodruin/: Arm.json  ChainBlender.json  Control.json  FKChain.json  IKChain.json  IKFKChain.json
