[tool.poetry]
name = "orodruin-maya"
version = "0.1.0"
description = "A Maya implementation for the Orodruin rigging library."
authors = ["Loïc Pinsard <muream@gmail.com>", "Aphosis <aphosis.github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
orodruin = {path = "../orodruin", develop = true}
orodruin-editor = {path = "../orodruin-editor", develop = true}
cmdx = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "duplicate-code",
    "fixme",
    "import-error",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "invalid-name",
]
